--- a/index.html
+++ b/index.html
@@ -23,6 +23,46 @@
             <span class="navbar-brand mb-0 h1">Navbar</span>
         </div>
     </nav>
+
+    <div class="container">
+        <div class="card quiz-card">
+            <img src="img/pencil.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Frage</h5>
+
+                <div class="card mb-2">
+                    <div class="card-body">
+                        Antwort!
+                    </div>
+                </div>
+                <div class="card mb-2">
+                    <div class="card-body">
+                        Antwort!
+                    </div>
+                </div>
+
+                <div class="card mb-2">
+                    <div class="card-body">
+                        Antwort!
+                    </div>
+                </div>
+
+                <div class="card mb-2">
+                    <div class="card-body">
+                        Antwort!
+                    </div>
+                </div>
+
+                <div class="question-footer">
+                    <span><b>1</b> von <b>5</b> Fragen</span>
+
+                    <button class="btn btn-primary">Nächste Frage</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
