--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
                 <div class="question-footer">
                     <span><b>1</b> von <b id="all-questions">5</b> Fragen</span>
 
-                    <button class="btn btn-primary">Nächste Frage</button>
+                    <button class="btn btn-primary" disabled id="next-button" onclick="nextQuestion()">Nächste
+                        Frage</button>
                 </div>
 
             </div>
