--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
     <div class="container">
         <div class="card quiz-card">
             <img src="img/pencil.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
+
+            <div class="card-body" id="endscreen" style="display: none;">
+                Quiz beendet! 
+            </div>
+
+            <div class="card-body" id="questionBody">
                 <h5 class="card-title" id="questiontext">Frage</h5>
 
                 <div class="card quiz-answer-card mb-2" onclick="answer('answer_1')">
@@ -54,7 +59,7 @@
                 </div>
 
                 <div class="question-footer">
-                    <span><b>1</b> von <b id="all-questions">5</b> Fragen</span>
+                    <span><b id="question-number"></b> von <b id="all-questions">5</b> Fragen</span>
 
                     <button class="btn btn-primary" disabled id="next-button" onclick="nextQuestion()">Nächste
                         Frage</button>
