--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
             <img src="img/pencil.jpg" class="card-img-top" alt="...">
 
             <div class="card-body" id="endscreen" style="display: none;">
-                Quiz beendet! 
+                <div class="text-center">
+                    Quiz beendet!
+                </div> 
+                <div><img class="width-100" src="img/trophy.png" alt=""></div>
+                <div class="text-center">
+                Du hast <b>xxx</b> Fragen von <b>xxx</b> richtig beantwortet.
+                </div>
             </div>
 
             <div class="card-body" id="questionBody">
