--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
 
     <div class="container">
         <div class="card quiz-card">
-            <img src="img/pencil.jpg" class="card-img-top" alt="...">
+            <img id="header-image" src="img/pencil.jpg" class="card-img-top" alt="...">
 
             <div class="card-body" id="endscreen" style="display: none;">
-                <div class="text-center">
+                <div class="text-center finalheadline">
                     Quiz beendet!
                 </div> 
-                <div><img class="width-100" src="img/trophy.png" alt=""></div>
+
                 <div class="text-center">
-                Du hast <b>xxx</b> Fragen von <b>xxx</b> richtig beantwortet.
+                Du hast <b id="right-amount-Of-Questions">xxx</b> Fragen von <b id="amount-Of-Questions">xxx</b> richtig beantwortet.
                 </div>
             </div>
 
