--- a/index.html
+++ b/index.html
@@ -28,13 +28,18 @@
         <div class="card quiz-card">
             <img id="header-image" src="img/pencil.jpg" class="card-img-top" alt="...">
 
+            <div class="progress">
+                <div id="progress-bar" class="progress-bar" role="progressbar" style="width: 0%;">25%</div>
+            </div>
+
             <div class="card-body" id="endscreen" style="display: none;">
                 <div class="text-center finalheadline">
                     Quiz beendet!
-                </div> 
+                </div>
 
                 <div class="text-center">
-                Du hast <b id="right-amount-Of-Questions">xxx</b> Fragen von <b id="amount-Of-Questions">xxx</b> richtig beantwortet.
+                    Du hast <b id="right-amount-Of-Questions">xxx</b> Fragen von <b id="amount-Of-Questions">xxx</b>
+                    richtig beantwortet.
                 </div>
             </div>
 
