--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                     Du hast <b id="right-amount-Of-Questions">xxx</b> Fragen von <b id="amount-Of-Questions">xxx</b>
                     richtig beantwortet.
                 </div>
+                <div class="button-row">
+                    <button onclick="restartGame()" class="btn btn-primary">Erneut spielen</button>
+                </div>
             </div>
 
             <div class="card-body" id="questionBody">
