--- a/index.html
+++ b/index.html
@@ -18,19 +18,15 @@
 </head>
 
 <body onload="init()">
-    <nav class="navbar bg-body-tertiary">
-        <div class="container-fluid">
-            <span class="navbar-brand mb-0 h1">Navbar</span>
+    <nav class="nav">
+        <div class="progress">
+            <div id="progress-bar" class="progress-bar" role="progressbar" style="width: 0%; border-radius: 0;">25%</div>
         </div>
     </nav>
 
     <div class="container">
         <div class="card quiz-card">
             <img id="header-image" src="img/pencil.jpg" class="card-img-top" alt="...">
-
-            <div class="progress">
-                <div id="progress-bar" class="progress-bar" role="progressbar" style="width: 0%;">25%</div>
-            </div>
 
             <div class="card-body" id="endscreen" style="display: none;">
                 <div class="text-center finalheadline">
